--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,25 @@
 </head>
 <body>
 
+	 <p class="notice"><%= notice %></p>
+     <p class="alert"><%= alert %></p>
+
+<div class="navbar navbar-nav">
+     <ul class="nav navbar-nav pull-right">
+     	<% if user_signed_in?%>
+
+     	<li><%= link_to "#{current_user.email}" %></li>
+      	<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          
+         <% else %>
+        <li><%= link_to "Sign in",new_user_session_path %></li>
+        <li><%= link_to "Log on", new_user_registration_path, method: :delete %></li>
+     
+        <% end %>
+     </ul>
+</div>
+
+
 <%= yield %>
 
 </body>
